--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_spa",
-  "homepage": "http://fncmacaroon.github.io/react-gh-pages",
+  "homepage": "https://github.com/fncmacaroon/fncmacaroon.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
